<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">London Trails</string>
    <string name="action_settings">Settings</string>
    <string name="streetmap_view">Street Map</string>
    <string name="satellite_view">Satellite</string>
    <string name="terrain_view">Terrain</string>
    <string name="hide_markers">Hide Points of Interest</string>
    <string name="show_markers">Show Points of Interest</string>
    <string name="reset_focus">Reset Focus</string>
    <string name="shared_preferences_name">SharedPreferences</string>
    <string name="shared_prefs_map_type">mapType</string>
    <string name="shared_prefs_current_route_id">currentRoute</string>
    <string name="route_options_confirm_text">Plot route</string>
    <string name="change_map_view">Change Map View</string>
    <string name="check_internet_connection">This is taking longer than it should.\nCheck your Internet connection.</string>

    <string-array name="capital_ring_sections">
        <item>1: Woolwich</item>
        <item>2: Falconwood</item>
        <item>3: Grove Park</item>
        <item>4: Crystal Palace</item>
        <item>5: Streatham</item>
        <item>6: Wimbledon Park</item>
        <item>7: Richmond</item>
        <item>8: Osterley Lock</item>
        <item>9: Greenford</item>
        <item>10: South Kenton</item>
        <item>11: Hendon Park</item>
        <item>12: Highgate</item>
        <item>13: Stoke Newington</item>
        <item>14: Hackney Wick</item>
        <item>15: Beckton District Park</item>
    </string-array>

    <string-array name="green_chain_walk_sections">
        <item>1: Thamesmead to Lesnes Abbey</item>
        <item>2: Erith Riverside to Bostall Woods</item>
        <item>3: Bostall Woods to Oxleas Meadows</item>
        <item>4: Charlton Park to Bostall Woods</item>
        <item>5: Thames Barrier to Oxleas Meadows</item>
        <item>6: Oxleas Wood to Mottingham</item>
        <item>7: Shepherdleas Wood to Middle Park</item>
        <item>8: Mottingham to Beckenham Place Park</item>
        <item>9: Mottingham Lane to Beckenham Place Park</item>
        <item>10: Beckenham Place Park to Crystal Palace Park</item>
        <item>11: Crystal Palace Park to Nunhead Cemetery</item>
    </string-array>

    <string-array name="london_loop_sections">
        <item>1: Erith Riverside</item>
        <item>2: Old Bexley</item>
        <item>3: Petts Wood</item>
        <item>4: West Wickham Common</item>
        <item>5: Hamsey Green</item>
        <item>6: Coulsdon South</item>
        <item>7: Banstead Downs</item>
        <item>8: Ewell</item>
        <item>9: Kingston Bridge</item>
        <item>10: Hatton Cross</item>
        <item>11: Hayes and Harlington</item>
        <item>12: Uxbridge</item>
        <item>13: Harefield West</item>
        <item>14: Moor Park</item>
        <item>15: Hatch End</item>
        <item>16: Elstree</item>
        <item>17: Cockfosters</item>
        <item>18: Enfield Lock</item>
        <item>19: Chingford</item>
        <item>20: Chigwell</item>
        <item>21: Havering-atte-Bower</item>
        <item>22: Harold Wood</item>
        <item>23: Upminster Bridge</item>
        <item>24: Rainham</item>
        <item>25: Purfleet</item>
    </string-array>

    <string-array name="directions">
        <item>Clockwise</item>
        <item>Anti-clockwise</item>
    </string-array>

    <string name="about">About</string>
</resources>